[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "test-package-ayush"
authors = [
  { name="ayush-tanx" },
]
license = { file = "LICENSE" }
description = "Testing out package deployment on PyPi"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "web3",
    "ecdsa",
    "websockets",
    "sympy",
    "typing-extensions"
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
keywords = ["connector", "finance", "api", "wrapper", "python" ]

[project.urls]
"Homepage" = "https://github.com/ayush-tanx/test-package"
"Issues" = "https://github.com/ayush-tanx/test-package/issues"

[project.optional-dependencies]
dev = [
    "eth-tester",
    "pytest",
    "pytest-mock",
    "responses",
    "pip-tools",
    "bumpver",
    "build",
    "twine",
    "python-dotenv"
]

[tool.bumpver]
current_version = "1.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "update version: v{old_version} -> v{new_version}"
commit = false
push = false

[tool.setuptools.dynamic]
version = {attr = "test_package.__version__"}

[tool.bumpver.file_patterns]
"src/test_package/__init__.py" = [
    '^__version__ = "{version}"$',
]

[tool.setuptools.package-data]
"test_package" = ["*.json"]
